# varwise-view-v2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MANIFEST.in  Makefile  README.md  pyproject.toml
varwise_view/: __init__.py  app.py  cli.py  core.py  download.py  paths.py
varwise_view/static/: app.css
varwise_view/templates/: index.j2  object.j2
